--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -222,7 +222,7 @@
 
               <img class="subscribe" src="https://img.icons8.com/external-victoruler-flat-victoruler/64/000000/external-boy-people-victoruler-flat-victoruler-5.png" alt="">
 
-              <span class="nav_name">GorkCoder</span>
+              <span class="nav_name">DHIRAJHUB</span>
 
             </a>
 
@@ -380,11 +380,11 @@
 
             <div class="heading">
 
-              <h4>GorkCoder <i class="fa fa-circle-check"></i> </h4>
+              <h4>DHIRAJHUB <i class="fa fa-circle-check"></i> </h4>
 
               <span>15M Subscribers</span>
 
-              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | GorkCoder </h5>
+              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | DHIRAJHUB </h5>
 
               <h5>In this video tutorial, I have show how to create a responsive youtube clone using Htlm and css only</h5>
 
@@ -496,7 +496,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -550,7 +550,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -600,7 +600,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -650,7 +650,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -720,7 +720,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -739,7 +739,7 @@
         <div class="right_content">
 
           <button class="chat">Show Chat Replay</button>
-(<!--
+<!--
           <div class="tags">
             <label class="tags-bg">All</label>
             <label class="tags-bg">Web Design</label>
@@ -753,7 +753,7 @@
   </a>
   <div class="details">
     <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+    <span>DHIRAJHUB<i class="fa fa-cricle-check"> </i> </span>
     <span>56.7M . 1 Week ago</span>
   </div>
 </div>
@@ -763,7 +763,7 @@
   </a>
   <div class="details">
     <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+    <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
     <span>56.7M . 1 Week ago</span>
   </div>
 </div>
@@ -773,7 +773,7 @@
   </a>
   <div class="details">
     <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+    <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
     <span>56.7M . 1 Week ago</span>
   </div>
 </div>
@@ -783,7 +783,7 @@
   </a>
   <div class="details">
     <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+    <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
     <span>56.7M . 1 Week ago</span>
   </div>
 </div>
@@ -793,7 +793,7 @@
   </a>
   <div class="details">
     <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+    <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
     <span>56.7M . 1 Week ago</span>
   </div>
 </div>
@@ -803,7 +803,7 @@
   </a>
   <div class="details">
     <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+    <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
     <span>56.7M . 1 Week ago</span>
   </div>
 </div>
