--- a/videoweb.html/video11.html
+++ b/videoweb.html/video11.html
@@ -220,7 +220,7 @@
 
               <img class="subscribe" src="https://img.icons8.com/external-victoruler-flat-victoruler/64/000000/external-boy-people-victoruler-flat-victoruler-5.png" alt="">
 
-              <span class="nav_name">GorkCoder</span>
+              <span class="nav_name">DHIRAJHUB</span>
 
             </a>
 
@@ -423,11 +423,11 @@
 
             <div class="heading">
 
-              <h4>GorkCoder <i class="fa fa-circle-check"></i> </h4>
+              <h4>DHIRAJHUB <i class="fa fa-circle-check"></i> </h4>
 
               <span>15M Subscribers</span>
 
-              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | GorkCoder </h5>
+              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | DHIRAJHUB </h5>
 
               <h5>In this video tutorial, I have show how to create a responsive youtube clone using Htlm and css only</h5>
 
@@ -539,7 +539,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -593,7 +593,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -643,7 +643,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -693,7 +693,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -763,7 +763,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -797,7 +797,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -807,7 +807,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -817,7 +817,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -827,7 +827,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -837,7 +837,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -847,7 +847,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
