--- a/videoweb.html/video14.html
+++ b/videoweb.html/video14.html
@@ -240,7 +240,7 @@
 
               <img class="subscribe" src="https://img.icons8.com/external-victoruler-flat-victoruler/64/000000/external-boy-people-victoruler-flat-victoruler-5.png" alt="">
 
-              <span class="nav_name">GorkCoder</span>
+              <span class="nav_name">DHIRAJHUB</span>
 
             </a>
 
@@ -444,11 +444,11 @@
 
             <div class="heading">
 
-              <h4>GorkCoder <i class="fa fa-circle-check"></i> </h4>
+              <h4>DHIRAJHUB <i class="fa fa-circle-check"></i> </h4>
 
               <span>15M Subscribers</span>
 
-              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | GorkCoder </h5>
+              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | DHIRAJHUB </h5>
 
               <h5>In this video tutorial, I have show how to create a responsive youtube clone using Htlm and css only</h5>
 
@@ -560,7 +560,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -614,7 +614,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -664,7 +664,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -714,7 +714,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -784,7 +784,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -818,7 +818,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -828,7 +828,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -838,7 +838,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -848,7 +848,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -858,7 +858,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -868,7 +868,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
