--- a/videoweb.html/video2.html
+++ b/videoweb.html/video2.html
@@ -134,7 +134,7 @@
 
             <a href="#" class="nav_link">
               <img class="subscribe" src="https://img.icons8.com/external-victoruler-flat-victoruler/64/000000/external-boy-people-victoruler-flat-victoruler-5.png" alt="">
-              <span class="nav_name">GorkCoder</span>
+              <span class="nav_name">DHIRAJHUB</span>
             </a>
             <a href="#" class="nav_link">
               <img class="subscribe" src="https://img.icons8.com/external-victoruler-flat-victoruler/64/000000/external-boy-occupation-and-people-victoruler-flat-victoruler.png" />
@@ -231,9 +231,9 @@
           <div class="details flex border_bottom">
             
             <div class="heading">
-              <h4>GorkCoder <i class="fa fa-circle-check"></i> </h4>
+              <h4>DHIRAJHUB <i class="fa fa-circle-check"></i> </h4>
               <span>15M Subscribers</span>
-              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | GorkCoder </h5>
+              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | DHIRAJHUB </h5>
               <h5>In this video tutorial, I have show how to create a responsive youtube clone using Htlm and css only</h5>
               <span>Show More</span>
             </div>
@@ -298,7 +298,7 @@
                 <img src="images/logo.png" alt="">
               </div>
               <div class="text">
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
                 <p>Thanks You</p>
               </div>
             </div>
@@ -327,7 +327,7 @@
                     <label>REPLY</label>
                   </div>
                 </div>
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
               </div>
             </div>
           </div>
@@ -352,7 +352,7 @@
                     <label>REPLY</label>
                   </div>
                 </div>
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
               </div>
             </div>
           </div>
@@ -377,7 +377,7 @@
                     <label>REPLY</label>
                   </div>
                 </div>
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
               </div>
             </div>
           </div>
@@ -412,7 +412,7 @@
                 <img src="images/logo.png" alt="">
               </div>
               <div class="text">
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
                 <p>Thanks You</p>
               </div>
             </div>-->
@@ -437,7 +437,7 @@
             </a>
             <div class="details">
               <p>How to make hotel booking website with HTML css....</p>
-              <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
@@ -447,7 +447,7 @@
             </a>
             <div class="details">
               <p>How to make hotel booking website with HTML css....</p>
-              <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
@@ -457,7 +457,7 @@
             </a>
             <div class="details">
               <p>How to make hotel booking website with HTML css....</p>
-              <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
@@ -467,7 +467,7 @@
             </a>
             <div class="details">
               <p>How to make hotel booking website with HTML css....</p>
-              <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
@@ -477,7 +477,7 @@
             </a>
             <div class="details">
               <p>How to make hotel booking website with HTML css....</p>
-              <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
@@ -487,7 +487,7 @@
             </a>
             <div class="details">
               <p>How to make hotel booking website with HTML css....</p>
-              <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
