--- a/videoweb.html/video5.html
+++ b/videoweb.html/video5.html
@@ -221,7 +221,7 @@
 
               <img class="subscribe" src="https://img.icons8.com/external-victoruler-flat-victoruler/64/000000/external-boy-people-victoruler-flat-victoruler-5.png" alt="">
 
-              <span class="nav_name">GorkCoder</span>
+              <span class="nav_name">DHIRAJHUB</span>
 
             </a>
 
@@ -391,11 +391,11 @@
 
             <div class="heading">
 
-              <h4>GorkCoder <i class="fa fa-circle-check"></i> </h4>
+              <h4>DHIRAJHUB <i class="fa fa-circle-check"></i> </h4>
 
               <span>15M Subscribers</span>
 
-              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | GorkCoder </h5>
+              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | DHIRAJHUB </h5>
 
               <h5>In this video tutorial, I have show how to create a responsive youtube clone using Htlm and css only</h5>
 
@@ -507,7 +507,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -561,7 +561,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -611,7 +611,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -661,7 +661,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -731,7 +731,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -765,7 +765,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -775,7 +775,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -785,7 +785,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -795,7 +795,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -805,7 +805,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -815,7 +815,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
