--- a/videoweb.html/video8.html
+++ b/videoweb.html/video8.html
@@ -222,7 +222,7 @@
 
               <img class="subscribe" src="https://img.icons8.com/external-victoruler-flat-victoruler/64/000000/external-boy-people-victoruler-flat-victoruler-5.png" alt="">
 
-              <span class="nav_name">GorkCoder</span>
+              <span class="nav_name">DHIRAJHUB</span>
 
             </a>
 
@@ -426,11 +426,11 @@
 
             <div class="heading">
 
-              <h4>GorkCoder <i class="fa fa-circle-check"></i> </h4>
+              <h4>DHIRAJHUB <i class="fa fa-circle-check"></i> </h4>
 
               <span>15M Subscribers</span>
 
-              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | GorkCoder </h5>
+              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | DHIRAJHUB </h5>
 
               <h5>In this video tutorial, I have show how to create a responsive youtube clone using Htlm and css only</h5>
 
@@ -542,7 +542,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -596,7 +596,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -646,7 +646,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -696,7 +696,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -766,7 +766,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -800,7 +800,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -810,7 +810,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -820,7 +820,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -830,7 +830,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -840,7 +840,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -850,7 +850,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
