--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                  </a>
                  <div class="nav_dropdown-collapse">
                   <div class="nav_dropdown-content">
-                    <a href="#" class="nav_dropdown-item">Anal</a>
+                    <a href="/categories/anal.html" class="nav_dropdown-item">Anal</a>
                     <a href="#" class="nav_dropdown-item">Aunty</a>
                     <a href="#" class="nav_dropdown-item">Arab</a>
                     <a href="#" class="nav_dropdown-item">Asian</a>
@@ -128,7 +128,7 @@
                 <div class="headline">
                 <h2><i class="fa fa-play-circle-o" aria-hidden="true"></i>AVABLES VIDEOS</h2>
                 </div>
-<<<<<<< HEAD
+<<<<<<
 
                 <ul class="text-toplist">
                 <select name="top">
@@ -196,7 +196,7 @@
 
                <a href="#" class="nav_link">
                  <img class="subscribe" src="https://img.icons8.com/external-victoruler-flat-victoruler/64/000000/external-boy-people-victoruler-flat-victoruler-5.png" alt="">
-                 <span class="nav_name">GorkCoder</span>
+                 <span class="nav_name">DHIRAJHUB</span>
                </a>
                <a href="#" class="nav_link">
                  <img class="subscribe" src="https://img.icons8.com/external-victoruler-flat-victoruler/64/000000/external-boy-occupation-and-people-victoruler-flat-victoruler.png" />
@@ -255,7 +255,7 @@
              
              <div class="heading">
                <p>How to make Hotel Booking Website With HTML CSS ......</p>
-               <span>DHIRAJHUBw <i class="fa fa-circle-check"></i> </span>
+               <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
                <span>56.7M .1 Week ago</span>
              </div>
            </div>
@@ -516,7 +516,7 @@
      </footer>
 
 
-     <script src="js/main.js" charset="utf-8"></script>
+     <script src="/js/main.js" charset="utf-8"></script>
    </body>
 
    </html>
