--- a/videoweb.html/video3.html
+++ b/videoweb.html/video3.html
@@ -222,7 +222,7 @@
 
               <img class="subscribe" src="https://img.icons8.com/external-victoruler-flat-victoruler/64/000000/external-boy-people-victoruler-flat-victoruler-5.png" alt="">
 
-              <span class="nav_name">GorkCoder</span>
+              <span class="nav_name">DHIRAJHUB</span>
 
             </a>
 
@@ -393,11 +393,11 @@
 
             <div class="heading">
 
-              <h4>GorkCoder <i class="fa fa-circle-check"></i> </h4>
+              <h4>DHIRAJHUB <i class="fa fa-circle-check"></i> </h4>
 
               <span>15M Subscribers</span>
 
-              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | GorkCoder </h5>
+              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | DHIRAJHUB </h5>
 
               <h5>In this video tutorial, I have show how to create a responsive youtube clone using Htlm and css only</h5>
 
@@ -509,7 +509,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -563,7 +563,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -613,7 +613,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -663,7 +663,7 @@
 
                 </div>
 
-                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From GorkCoder </label>
+                <label class="tags"> <i class="fa fa-caret-down"> </i> View Replay From DHIRAJHUB </label>
 
               </div>
 
@@ -733,7 +733,7 @@
 
               <div class="text">
 
-                <h4> <label>GorkCoder</label> <span>2 months ago</span> </h4>
+                <h4> <label>DHIRAJHUB</label> <span>2 months ago</span> </h4>
 
                 <p>Thanks You</p>
 
@@ -767,7 +767,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -777,7 +777,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -787,7 +787,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -797,7 +797,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -807,7 +807,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
@@ -817,7 +817,7 @@
     </a>
     <div class="details">
       <p>How to make hotel booking website with HTML css....</p>
-      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
       <span>56.7M . 1 Week ago</span>
     </div>
   </div>
