--- a/index.html
+++ b/index.html
@@ -509,10 +509,18 @@
         </div>
 
        </section>
-     </main>
-     <footer>
+     </main><br>
+     <br>
+     
+     <div class="footer">
+      <a href="https://www.dhirajingle.ml">
+@dhirajingle.ml</a>
 
-     </footer>
+<a href="https://www.krushnal09.cf">
+@krushnal09.cf</a>
+
+
+     </div>
 
 
      <script src="/js/main.js" charset="utf-8"></script>
