--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <img src="https://hitwebcounter.com/counter/counter.php?page=8047275&style=0010&nbdigits=4&type=ip&initCount=0" id="count" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
                </div>                       
 </div>
+<br>
            <div class="nav_list">
              <div class="nav_items navtop">
                <a href="/" class="nav_link navtop active">
@@ -123,6 +124,11 @@
                     </div>
                 </div>
                </div>
+               <div class="msg">
+               If you want to upload your videos or you have any suggestions mail us on~<br>
+               <li>idhiraj357@gmail.com</li>
+               </div>        
+
                   <!--<div class="container">
                 <div class="headline">
                 <h2><i class="fa fa-play-circle-o" aria-hidden="true"></i>AVABLES VIDEOS</h2>
