--- a/index.html
+++ b/index.html
@@ -516,6 +516,27 @@
 
        </section>
      </main><br>
+     <div class="pagination ">
+      <ul>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">6</a></li>
+        <li><a href="#">7</a></li>
+        <li><a href="#">8</a></li>
+        <li><a href="#">9</a></li>
+        <li><a href="#">10</a></li>
+       
+        <li class="no-page"><a href="#" class="ellipsis last-ellipsis">...</a></li>
+        <li><a href="#" class="last-page">1001</a></li>
+        <li><a href="#" class="no-page next-page">
+          <span class="mobile-hide">Next</span>
+          <span class="mobile-show-inline icon-f icf-chevron-right"></span>
+        </a>
+      </li>
+      </ul>
+    </div><br>
      <br>
      
      <div class="footer">
