--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -378,8 +378,7 @@
 
               <h4>DHIRAJHUB <i class="fa fa-circle-check"></i> </h4>
 
-              <span>20M
- Subscribers</span>
+              <span>20MSubscribers</span>
 
               <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | DHIRAJHUB </h5>
 
