--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -318,7 +318,7 @@
           <!--        video tages            -->
 
 <video>
-    <iframe width="866" height="650" src="https://xhamster18.desi/videos/doctors-adventure-dani-daniels-johnny-sins-driven-10461311" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+    <iframe src="https://xhamster18.desi/videos/doctors-adventure-dani-daniels-johnny-sins-driven-10461311" width="650px" height="886px" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a href="" target="_blank"></a>
           </video>
 
           <!--        total viwer            -->
