--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -318,8 +318,7 @@
           <!--        video tages            -->
 
 <video>
-    <iframe src="https://xhamster18.desi/videos/doctors-adventure-dani-daniels-johnny-sins-driven-10461311" width="650px" height="886px" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a href="" target="_blank"></a>
-          </video>
+    <iframe width="650" height="885" src="https://www.18porn.sex/embed/1649372" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>  </video>
 
           <!--        total viwer            -->
 
@@ -333,7 +332,7 @@
 
                 <i class="fa fa-thumbs-up"></i>
 
-                <label>225k</label>
+                <label>999k</label>
 
               </div>
 
