--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -317,7 +317,7 @@
 
           <!--        video tages            -->
 
-<iframe width="650" height="886" src="https://xhamster18.desi/videos/doctors-adventure-dani-daniels-johnny-sins-driven-10461311" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+<iframe width="650" height="886" src="https://xhamster18.desi/videos/doctors-adventure-dani-daniels-johnny-sins-driven-10461311" id="vid" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
     
           
 
@@ -334,7 +334,7 @@
 
                 <i class="fa fa-thumbs-up"></i>
 
-                <label>99k</label>
+                <label>69k</label>
 
               </div>
 
