--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
          </div>
          <!---->
          <div class="video_items">
-         <a href="/videoweb.html/videoxxx.html">
+         <a href="/videoweb.html/video2.html">
             <img src="images/video_images/2.jpg" alt="">
           </a>
           <div class="details flex">
