--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
           <div class="details flex">
 
             <div class="heading">
-              <p></p>
+              <p>Coming Soon</p>
               <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
               <span>56.7M .1 Week ago</span>
             </div>
@@ -468,7 +468,7 @@
           <div class="details flex">
 
             <div class="heading">
-              <p></p>
+              <p>Coming Soon</p>
               <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
               <span>56.7M .1 Week ago</span>
             </div>
@@ -481,7 +481,7 @@
           <div class="details flex">
 
             <div class="heading">
-              <p></p>
+              <p>Coming Soon</p>
               <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
               <span>56.7M .1 Week ago</span>
             </div>
@@ -494,7 +494,7 @@
           <div class="details flex">
 
             <div class="heading">
-              <p></p>
+              <p>Coming Soon</p>
               <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
               <span>56.7M .1 Week ago</span>
             </div>
@@ -507,7 +507,7 @@
           <div class="details flex">
 
             <div class="heading">
-              <p></p>
+              <p>Coming Soon</p>
               <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
               <span>56.7M .1 Week ago</span>
             </div>
