--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <div class="details flex">
 
             <div class="heading">
-              <p>Blacked Raw - My Grilfriend got Gangbang at the after party</p>
+              <p>Blacked Raw - My Girlfriend got Gangbang at the after party</p>
               <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
               <span>56.7M .1 Week ago</span>
             </div>
