--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <!--video template-->
          <div class="video_items">
            <a href="/videoweb.html/video1.html">
-             <img src="images/video_images/1.jpg" alt="">
+             <img src="images/THUMBNAILS/01.jpg" alt="">
            </a>
            <div class="details flex">
              
@@ -268,7 +268,7 @@
          <!---->
          <div class="video_items">
          <a href="/videoweb.html/video2.html">
-            <img src="images/video_images/2.jpg" alt="">
+            <img src="images/THUMBNAILS/02.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -281,7 +281,7 @@
         </div>
          <div class="video_items">
            <a href="/videoweb.html/video3.html">
-             <img src="images/video_images/3.jpg" alt="">
+             <img src="images/THUMBNAILS/03.jpg" alt="">
            </a>
            <div class="details flex">
 
@@ -294,7 +294,7 @@
          </div>
          <div class="video_items">
           <a href="/videoweb.html/video4.html">
-            <img src="images/video_images/4.jpg" alt="">
+            <img src="images/THUMBNAILS/04.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -307,7 +307,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video5.html">
-            <img src="images/video_images/5.jpg" alt="">
+            <img src="images/THUMBNAILS/05.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -320,7 +320,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video6.html">
-            <img src="images/video_images/6.jpg" alt="">
+            <img src="images/THUMBNAILS/06.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -333,7 +333,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video7.html">
-            <img src="images/video_images/7.jpg" alt="">
+            <img src="images/THUMBNAILS/07.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -346,7 +346,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video8.html">
-            <img src="images/video_images/8.jpg" alt="">
+            <img src="images/THUMBNAILS/08.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -359,7 +359,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video9.html">
-            <img src="images/video_images/9.jpg" alt="">
+            <img src="images/THUMBNAILS/09.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -372,7 +372,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video10.html">
-            <img src="images/video_images/10.jpg" alt="">
+            <img src="images/THUMBNAILS/10.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -385,7 +385,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video11.html">
-            <img src="images/video_images/11.jpg" alt="">
+            <img src="images/THUMBNAILS/11.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -398,7 +398,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video12.html">
-            <img src="images/video_images/12.jpg" alt="">
+            <img src="images/THUMBNAILS/12.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -411,7 +411,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video13.html">
-            <img src="images/video_images/13.jpg" alt="">
+            <img src="images/THUMBNAILS/13.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -424,7 +424,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video14.html">
-            <img src="images/video_images/14.jpg" alt="">
+            <img src="images/THUMBNAILS/14.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -437,7 +437,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video15.html">
-            <img src="images/video_images/15.jpg" alt="">
+            <img src="images/THUMBNAILS/15.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -450,7 +450,7 @@
         </div>
         <div class="video_items">
           <a href="/videoweb.html/video16.html">
-            <img src="images/video_images/16.jpg" alt="">
+            Coming soon
           </a>
           <div class="details flex">
 
