--- a/videoweb.html/video17.html
+++ b/videoweb.html/video17.html
@@ -180,8 +180,8 @@
                   <a href="/categories/deepthroat.html" class="nav_dropdown-item">Deepthroat</a>
                   <a href="/categories/gangbang.html" class="nav_dropdown-item">Gangbang</a>
                   <a href="/categories/hardcore.html" class="nav_dropdown-item">Hardcore</a>
-                  <a href="/categories/hentai" class="nav_dropdown-item">Hentai</a>
-                  <a href="/categories/hindi" class="nav_dropdown-item">Hindi</a>
+                  <a href="/categories/hentai.html" class="nav_dropdown-item">Hentai</a>
+                  <a href="/categories/hindi.html" class="nav_dropdown-item">Hindi</a>
                   <a href="/categories/indian.html" class="nav_dropdown-item">Indian</a>
                   <a href="/categories/maid.html" class="nav_dropdown-item">Maid</a>
                   <a href="/categories/mms.html" class="nav_dropdown-item">MMS</a>
@@ -352,10 +352,10 @@
 -->
           <!--        video tages            -->
 
-<video>
+
     <iframe src="https://www.xvideos.com/embedframe/58457941" frameborder=0 width=866 height=400 id="vid" scrolling=no allowfullscreen=allowfullscreen></iframe>
 
-</video>
+
 
           <!--        total viwer            -->
 
