--- a/videoweb.html/video3.html
+++ b/videoweb.html/video3.html
@@ -339,7 +339,7 @@
 
                 <i class="fa fa-thumbs-up"></i>
 
-                <label>225k</label>
+                <label>69k</label>
 
               </div>
 
@@ -359,21 +359,8 @@
 
               </div>
 
-              <div class="icon">
 
-                <i class="fa fa-scissors"></i>
 
-                <label>CLIP</label>
-
-              </div>
-
-              <div class="icon">
-
-                <i class="fa fa-bookmark"></i>
-
-                <label>SAVE</label>
-
-              </div>
 
               <div class="icon">
 
@@ -421,7 +408,7 @@
 
               <h4>120 Comments</h4>
 
-              <h4> <i class="fa fa-list-ul"></i> <label>SORT BY</label> </h4>
+              <h4> <i class="fa fa-list-ul"></i> <label>SORT</label> </h4>
 
             </div>
 
@@ -763,70 +750,71 @@
             <label class="tags-bg">Backend</label>
           </div>
 -->
-          <div class="video_items vide_sidebar flex">
-            <a href="/videoweb.html/video3.html">
-              <img src="/images/video_images/3.jpg" alt="">
-            </a>
-            <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
-              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
-              <span>56.7M . 1 Week ago</span>
-            </div>
-          </div>
-          <div class="video_items vide_sidebar flex">
-            <a href="/videoweb.html/video4.html">
-              <img src="/images/video_images/4.jpg" alt="">
-            </a>
-            <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
-              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
-              <span>56.7M . 1 Week ago</span>
-            </div>
-          </div>
-          <div class="video_items vide_sidebar flex">
-            <a href="/videoweb.html/video5.html">
-              <img src="/images/video_images/5.jpg" alt="">
-            </a>
-            <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
-              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
-              <span>56.7M . 1 Week ago</span>
-            </div>
-          </div>
-          <div class="video_items vide_sidebar flex">
-            <a href="/videoweb.html/video8.html">
-              <img src="/images/video_images/8.jpg" alt="">
-            </a>
-            <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
-              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
-              <span>56.7M . 1 Week ago</span>
-            </div>
-          </div>
-          <div class="video_items vide_sidebar flex">
-            <a href="/videoweb.html/video9.html">
-              <img src="/images/video_images/9.jpg" alt="">
-            </a>
-            <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
-              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
-              <span>56.7M . 1 Week ago</span>
-            </div>
-          </div>
-          <div class="video_items vide_sidebar flex">
-            <a href="/videoweb.html/video10.html">
-              <img src="/images/video_images/10.jpg" alt="">
-            </a>
-            <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
-              <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
-              <span>56.7M . 1 Week ago</span>
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="video_items vide_sidebar flex">
+  <a href="/videoweb.html/video1.html">
+    <img src="/images/THUMBNAILS/01.jpg" alt="">
+  </a>
+  <div class="details">
+    <p>Libarary Masturbation with City arab pornstar Mia Khalifa</p>
 
-    </section>
+    <span>DHIRAJHUB<i class="fa fa-cricle-check"> </i> </span>
+    <span>56.7M . 1 Week ago</span>
+  </div>
+</div>
+<div class="video_items vide_sidebar flex">
+  <a href="/videoweb.html/video4.html">
+    <img src="/images/THUMBNAILS/04.jpg" alt="">
+  </a>
+  <div class="details">
+    <p>Blacked Raw - My Grilfriend got Gangbang at the after party</p>
+    <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
+    <span>56.7M . 1 Week ago</span>
+  </div>
+</div>
+<div class="video_items vide_sidebar flex">
+  <a href="/videoweb.html/video5.html">
+    <img src="/images/THUMBNAILS/05.jpg" alt="">
+  </a>
+  <div class="details">
+    <p>Dani Daniels Gives Amazing bj and gets Rewarded with Doggy</p>
+    <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
+    <span>56.7M . 1 Week ago</span>
+  </div>
+</div>
+<div class="video_items vide_sidebar flex">
+  <a href="/videoweb.html/video8.html">
+    <img src="/images/THUMBNAILS/08.jpg" alt="">
+  </a>
+  <div class="details">
+    <p>Vixen Collage Girl Sybil Stays with a Married Couple Abroad</p>
+    <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
+    <span>56.7M . 1 Week ago</span>
+  </div>
+</div>
+<div class="video_items vide_sidebar flex">
+  <a href="/videoweb.html/video9.html">
+    <img src="/images/THUMBNAILS/09.jpg" alt="">
+  </a>
+  <div class="details">
+    <p>Never tried Giant BBC Before With Cum Thirsty Indian Hindi</p>
+    <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
+    <span>56.7M . 1 Week ago</span>
+  </div>
+</div>
+<div class="video_items vide_sidebar flex">
+  <a href="/videoweb.html/video10.html">
+    <img src="/images/THUMBNAILS/10.jpg" alt="">
+  </a>
+  <div class="details">
+    <p>Making Boss Riley Squirt gets Him the Job S27 E14</p>
+    <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
+    <span>56.7M . 1 Week ago</span>
+  </div>
+</div>
+</div>
+</div>
+</section>
+
 
   </main>
 
