--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -30,30 +30,29 @@
 <body>
 
   <!--    header      -->
-
   <header class="header">
     <div class="header_container">
-     
-<a href="/">
-     <div class="img" id="logo">
-       <img src="/images/logo.jpeg" alt="">
-     </div></a>
-   </div>
-      <div class="none"> </div>
-      <div class="search">
-        <input type="text" placeholder="Search">
-        <i class="fa-solid fa-magnifying-glass"></i>
-      </div>
 
-<br>
-     
+      <a href="/">
+        <div class="img" id="logo">
+          <img src="/images/logo.jpeg" alt="">
+        </div>
+      </a>
+    </div>
+    <div class="none"> </div>
+    <div class="search">
+      <input type="text" placeholder="Search">
+      <i class="fa-solid fa-magnifying-glass"></i>
+    </div>
 
-      <div class="toggle">
-        <i class="fa-solid fa-bars" id="header-toggle"></i>
-      </div>
+    <br>
+
+
+    <div class="toggle">
+      <i class="fa-solid fa-bars" id="header-toggle"></i>
+    </div>
     </div>
   </header>
-
   <!--    header      -->
 
   <!--    nav      -->
@@ -391,7 +390,7 @@
 
               <h4>120 Comments</h4>
 
-              <h4> <i class="fa fa-list-ul"></i> <label>SORT BY</label> </h4>
+              <h4> <i class="fa fa-list-ul"></i> <label>SORT</label> </h4>
 
             </div>
 
@@ -733,18 +732,19 @@
           </div>
 -->
           <div class="video_items vide_sidebar flex">
-            <a href="/videoweb.html/video3.html">
-              <img src="/images/video_images/3.jpg" alt="">
+            <a href="/videoweb.html/video1.html">
+              <img src="/images/THUMBNAILS/01.jpg" alt="">
             </a>
             <div class="details">
-              <p>Desi Sexy Video Desi_Hot2 Sexy, Video, Pron74.</p>
+              <p>Libarary Masturbation with City arab pornstar Mia Khalifa</p>
+
               <span>DHIRAJHUB<i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
           <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html/video4.html">
-              <img src="/images/video_images/4.jpg" alt="">
+              <img src="/images/THUMBNAILS/04.jpg" alt="">
             </a>
             <div class="details">
               <p>Blacked Raw - My Grilfriend got Gangbang at the after party</p>
@@ -754,7 +754,7 @@
           </div>
           <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html/video5.html">
-              <img src="/images/video_images/5.jpg" alt="">
+              <img src="/images/THUMBNAILS/05.jpg" alt="">
             </a>
             <div class="details">
               <p>Dani Daniels Gives Amazing bj and gets Rewarded with Doggy</p>
@@ -764,7 +764,7 @@
           </div>
           <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html/video8.html">
-              <img src="/images/video_images/8.jpg" alt="">
+              <img src="/images/THUMBNAILS/08.jpg" alt="">
             </a>
             <div class="details">
               <p>Vixen Collage Girl Sybil Stays with a Married Couple Abroad</p>
@@ -774,7 +774,7 @@
           </div>
           <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html/video9.html">
-              <img src="/images/video_images/9.jpg" alt="">
+              <img src="/images/THUMBNAILS/09.jpg" alt="">
             </a>
             <div class="details">
               <p>Never tried Giant BBC Before With Cum Thirsty Indian Hindi</p>
@@ -784,7 +784,7 @@
           </div>
           <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html/video10.html">
-              <img src="/images/video_images/10.jpg" alt="">
+              <img src="/images/THUMBNAILS/10.jpg" alt="">
             </a>
             <div class="details">
               <p>Making Boss Riley Squirt gets Him the Job S27 E14</p>
