--- a/videoweb.html/video2.html
+++ b/videoweb.html/video2.html
@@ -386,7 +386,7 @@
 
               <h4>120 Comments</h4>
 
-              <h4> <i class="fa fa-list-ul"></i> <label>SORT BY</label> </h4>
+              <h4> <i class="fa fa-list-ul"></i> <label>SORT</label> </h4>
 
             </div>
 
@@ -728,61 +728,62 @@
           </div>
 -->
           <div class="video_items vide_sidebar flex">
-            <a href="/videoweb.html/video3.html">
-              <img src="/images/video_images/3.jpg" alt="">
+            <a href="/videoweb.html/video1.html">
+              <img src="/images/THUMBNAILS/01.jpg" alt="">
             </a>
             <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
+              <p>Libarary Masturbation with City arab pornstar Mia Khalifa</p>
+
               <span>DHIRAJHUB<i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
           <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html/video4.html">
-              <img src="/images/video_images/4.jpg" alt="">
+              <img src="/images/THUMBNAILS/04.jpg" alt="">
             </a>
             <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
+              <p>Blacked Raw - My Grilfriend got Gangbang at the after party</p>
               <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
           <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html/video5.html">
-              <img src="/images/video_images/5.jpg" alt="">
+              <img src="/images/THUMBNAILS/05.jpg" alt="">
             </a>
             <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
+              <p>Dani Daniels Gives Amazing bj and gets Rewarded with Doggy</p>
               <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
           <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html/video8.html">
-              <img src="/images/video_images/8.jpg" alt="">
+              <img src="/images/THUMBNAILS/08.jpg" alt="">
             </a>
             <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
+              <p>Vixen Collage Girl Sybil Stays with a Married Couple Abroad</p>
               <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
           <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html/video9.html">
-              <img src="/images/video_images/9.jpg" alt="">
+              <img src="/images/THUMBNAILS/09.jpg" alt="">
             </a>
             <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
+              <p>Never tried Giant BBC Before With Cum Thirsty Indian Hindi</p>
               <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
           <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html/video10.html">
-              <img src="/images/video_images/10.jpg" alt="">
+              <img src="/images/THUMBNAILS/10.jpg" alt="">
             </a>
             <div class="details">
-              <p>How to make hotel booking website with HTML css....</p>
+              <p>Making Boss Riley Squirt gets Him the Job S27 E14</p>
               <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
