--- a/videoweb.html/video11.html
+++ b/videoweb.html/video11.html
@@ -353,8 +353,7 @@
 -->
           <!--        video tages            -->
 
-          <iframe src="https://xhamster18.desi/videos/blacked-riley-reid-gets-dp-d-by-two-bulls-12511545" width="650"
-            height="886" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a href=""
+          <iframe src="https://xhamster18.desi/videos/blacked-riley-reid-gets-dp-d-by-two-bulls-12511545"  width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a href=""
             target="_blank"></a>
 
           <!--        total viwer            -->
