--- a/videoweb.html/video17.html
+++ b/videoweb.html/video17.html
@@ -355,7 +355,7 @@
           <!--        video tages            -->
 
 
-          <iframe src="https://www.xvideos.com/embedframe/58457941" frameborder=0 width=866 height=400 id="vid"
+          <iframe src="https://www.xvideos.com/embedframe/58457941" frameborder=0  width="760px" height="760px" id="vid"
             scrolling=no allowfullscreen=allowfullscreen></iframe>
 
 
