--- a/videoweb.html/video2.html
+++ b/videoweb.html/video2.html
@@ -298,8 +298,8 @@
 
           <!--        video tages            -->
 
-          <iframe src="https://xhamster18.desi/videos/mia-khalifa-1000-midnights-bbc-compilation-xh9hSbx" width="650"
-            height="886" id="vid" frameBorder="0" style="border: 0;"></iframe><br>
+          <iframe src="https://xhamster18.desi/videos/mia-khalifa-1000-midnights-bbc-compilation-xh9hSbx" 
+          width="760" height="760px" id="vid" frameBorder="0" style="border: 0;"></iframe><br>
           <a href="" target="_blank"></a>
 
 
