--- a/videoweb.html/video10.html
+++ b/videoweb.html/video10.html
@@ -354,7 +354,7 @@
 
           <iframe
             src="https://xhamster18.desi/videos/blacked-raw-my-girlfriend-got-gangbanged-at-the-after-party-9811316"
-            width="650" height="886" id="vid" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a
+             width="760" height="760px" id="vid" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a
             href="" target="_blank"></a>
 
           <!--        total viwer            -->
