--- a/videoweb.html/video15.html
+++ b/videoweb.html/video15.html
@@ -353,7 +353,7 @@
 -->
           <!--        video tages            -->
           <iframe src="https://xhamster18.desi/videos/sybian-in-classroom-hot-cut-scene-teacher-and-student-14889244"
-            width="650" height="886" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a
+             width="760px" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a
             href="" target="_blank"></a>
           <!--        total viwer            -->
 
