--- a/videoweb.html/video20.html
+++ b/videoweb.html/video20.html
@@ -354,7 +354,7 @@
           <!--        video tages            -->
 
 
-          <iframe src="https://www.xvideos.com/embedframe/69274887" frameborder=0 width=866 height=400 id="vid"
+          <iframe src="https://www.xvideos.com/embedframe/69274887" frameborder=0  width="760px" height="760px" id="vid"
             scrolling=no allowfullscreen=allowfullscreen></iframe>
 
 
